--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-markdown": "^6.0.2",
     "react-query": "^3.19.0",
     "react-router": "^5.2.0",
