First production build with gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://localhost:5000",
+  "homepage": "https://pietabrood.github.io/personal_blog",
   "name": "pieter_blog",
   "version": "0.1.0",
   "private": true,
