--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://pietabrood.github.io/personal_blog",
   "name": "pieter_blog",
   "version": "0.1.0",
   "private": true,
@@ -22,6 +21,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.4",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
