--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://blog.devpieter.co.za",
   "name": "pieter_blog",
   "version": "0.1.0",
   "private": true,
