--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
         "deploy": "git add . && git commit -m 'Deployment' && git push",
-        "production": "git pull && pm2 serve build 5000"
+        "production": "git pull && pm2 serve build 5000 -f"
     },
     "eslintConfig": {
         "extends": [
