--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
         "react-query": "^3.19.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.3",
-        "react-syntax-highlighter": "^15.4.4",
-        "typescript": "^4.3.5",
-        "web-vitals": "^1.1.2"
+        "react-scripts": "5.0.0",
+        "react-syntax-highlighter": "^15.4.4"
     },
     "scripts": {
         "start": "react-scripts start",
