dev-ops: Added commit script to build solution

--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "git add . && git commit -m 'Deployment' && git push",
-        "production": "git pull && pm2 stop blog && pm2 serve build 5000 --name blog"
+        "precommit": "npm run build",
+        "commit": "git commit -m 'production build'"
     },
     "browserslist": {
         "production": [
