--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "@types/jest": "^27.4.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
         "axios": "^0.21.1",
+        "enzyme": "^3.11.0",
         "framer-motion": "^4.1.17",
         "gh-pages": "^3.2.3",
+        "jest": "^27.4.7",
         "react": "^17.0.2",
         "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
@@ -42,5 +46,13 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "jest": {
+        "setupFilesAfterEnv": [
+          "<rootDir>/src/setupTests.js"
+        ],
+        "transform": {
+            "^.+\\.(js|jsx)$": "babel-jest"
+        }
     }
 }
