--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,3 +29,10 @@ jobs:
     - run: npm ci
     - run: npm run test
     - run: CI=false npm run build
+    - run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+    - run: |
+          git add .
+          git commit -m "worker: Build commit"
+          git push
