--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Continuous Integration
 
 on:
+  pull_request:
+    branches: 
+      - main
+      
   push:
     branches:
       - main
@@ -29,16 +30,22 @@ jobs:
     - run: npm ci
     - run: npm run test
     - run: CI=false npm run build
-    - run: |
+    
+    - name: Set up gh user
+      if: github.event_name != 'pull_request'
+      run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           
     - name: Extract branch name
+      if: github.event_name != 'pull_request'
       shell: bash
       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       id: extract_branch
       
-    - run: |
+    - name: Commit build
+      if: github.event_name != 'pull_request'
+      run: |
           git add .
           git commit -m "worker: Build commit"
           git push origin ${{ steps.extract_branch.outputs.branch }}
