--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^17.0.2",
         "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
+        "react-ga": "^3.3.0",
         "react-helmet": "^6.1.0",
         "react-icons": "^4.2.0",
         "react-markdown": "^6.0.2",
