--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
         "axios": "^0.21.1",
         "enzyme": "^3.11.0",
+        "fastcomments-react": "^2.1.3",
         "framer-motion": "^4.1.17",
         "gh-pages": "^3.2.3",
         "jest": "^27.4.7",
