--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
-        "@types/jest": "^27.4.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
         "axios": "^0.21.1",
         "enzyme": "^3.11.0",
@@ -57,5 +56,12 @@
         "transform": {
             "^.+\\.(js|jsx)$": "babel-jest"
         }
+    },
+    "devDependencies": {
+        "@types/jest": "^27.5.0",
+        "@types/node": "^17.0.31",
+        "@types/react": "^18.0.8",
+        "@types/react-dom": "^18.0.3",
+        "typescript": "^4.6.4"
     }
 }
