--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "postbuild": "react-spa-prerender",
         "test": "jest",
         "eject": "react-scripts eject",
         "precommit": "npm run build && git add .",
@@ -62,6 +63,7 @@
         "@types/node": "^17.0.31",
         "@types/react": "^18.0.8",
         "@types/react-dom": "^18.0.3",
+        "react-spa-prerender": "^1.0.14",
         "typescript": "^4.6.4"
     }
 }
