--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,4 +18,5 @@ jobs:
           node-version: '14.x'
         
       - name: Restart server application
-        run: pm2 restart blog
+        run: pm2 stop blog
+        run: node server/index.js
