--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,10 @@ jobs:
         with:
           node-version: "14.x"
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Restart server application
         run: |
           pm2 stop blog 
-          pm2 start server/index.js --name blog
+          npm run server
