--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
         "axios": "^0.21.1",
         "enzyme": "^3.11.0",
+        "express": "^4.18.1",
         "fastcomments-react": "^2.1.3",
         "framer-motion": "^4.1.17",
         "gh-pages": "^3.2.3",
         "jest": "^27.4.7",
+        "pm2": "^5.2.0",
         "react": "^17.0.2",
         "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
@@ -37,7 +39,7 @@
         "eject": "react-scripts eject",
         "precommit": "npm run build && git add .",
         "commit": "git commit -m 'production build'",
-        "server": "node server/index.js"
+        "server": "pm2 restart blog"
     },
     "browserslist": {
         "production": [
