--- a/package.json
+++ b/package.json
@@ -1,72 +1,37 @@
 {
-    "name": "pieter_blog",
-    "version": "0.1.0",
-    "dependencies": {
-        "@chakra-ui/icons": "^1.0.14",
-        "@chakra-ui/react": "^1.6.5",
-        "@emotion/react": "^11.4.0",
-        "@emotion/styled": "^11.3.0",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^11.2.7",
-        "@testing-library/user-event": "^12.8.3",
-        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-        "axios": "^0.21.1",
-        "enzyme": "^3.11.0",
-        "express": "^4.18.1",
-        "fastcomments-react": "^2.1.3",
-        "framer-motion": "^4.1.17",
-        "gh-pages": "^3.2.3",
-        "jest": "^27.4.7",
-        "pm2": "^5.2.0",
-        "react": "^17.0.2",
-        "react-copy-to-clipboard": "^5.0.4",
-        "react-dom": "^17.0.2",
-        "react-ga": "^3.3.0",
-        "react-helmet": "^6.1.0",
-        "react-icons": "^4.2.0",
-        "react-markdown": "^6.0.2",
-        "react-query": "^3.19.0",
-        "react-router": "^5.2.0",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "5.0.0",
-        "react-syntax-highlighter": "^15.4.4"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "postbuild": "react-spa-prerender",
-        "test": "jest",
-        "eject": "react-scripts eject",
-        "precommit": "npm run build && git add .",
-        "commit": "git commit -m 'production build'",
-        "server": "pm2 restart blog"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "jest": {
-        "setupFilesAfterEnv": [
-            "<rootDir>/src/setupTests.js"
-        ],
-        "transform": {
-            "^.+\\.(js|jsx)$": "babel-jest"
-        }
-    },
-    "devDependencies": {
-        "@types/jest": "^27.5.0",
-        "@types/node": "^17.0.31",
-        "@types/react": "^18.0.8",
-        "@types/react-dom": "^18.0.3",
-        "react-spa-prerender": "^1.0.14",
-        "typescript": "^4.6.4"
-    }
+  "name": "personal_blog_2.0",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@chakra-ui/react": "^2.0.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "axios": "^0.27.2",
+    "chakra-ui": "^0.3.9",
+    "framer-motion": "^6",
+    "gray-matter": "^4.0.3",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
+    "react-query": "^3.39.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "reading-time": "^1.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "17.0.34",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
+    "@types/react-syntax-highlighter": "^15.5.1",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.6.4"
+  }
 }
