--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Restart server application
         run: |
-          pm2 stop blog 
-          npm run server
+          pm2 delete blog || true 
+          pm2 start npm --name "blog" -- start
