wip: Added build to .gitignore

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Build solution
+        run: npm run build
+
       - name: Restart server application
         run: |
           pm2 delete blog || true 
