--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,11 +18,11 @@ jobs:
           node-version: "14.x"
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn
 
       - name: Build solution
         run: |
-          npm run build
+          yarn build
 
       - name: Restart server application
         run: |
