--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,15 @@ jobs:
         with:
           node-version: "14.x"
 
+      - name: Setup yarn
+        run: npm install -g yarn
+
+      - name: Setup Nodejs with yarn caching
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14.x"
+          cache: yarn
+
       - name: Install dependencies
         run: yarn
 
