--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,5 +35,4 @@ jobs:
 
       - name: Restart server application
         run: |
-          pm2 delete blog || true 
-          pm2 start yarn --name "blog" -- start
+          pm2 restart blog
