feature: Styling updates

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,4 +35,4 @@ jobs:
 
       - name: Restart server application
         run: |
-          pm2 restart blog
+          pm2 restart blog || pm2 start yarn --name "blog" -- start
